I covered the launch screen logo with a div element to prevent the user from performing any default browser image action on it, and i changed the logic of the written brand name animation from joining an array of text characters to spliting a string text and using the resulting array as the writing source.

--- a/styles/launch-screen-media-queries.css
+++ b/styles/launch-screen-media-queries.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 425px) {
 	.dev-logo {
 		max-width: 300px;
-		max-height: 300px;
+		max-height: 285px;
 		opacity: 1;
 	}
 } ;
