--- a/styles/launch-screen.css
+++ b/styles/launch-screen.css
@@ -4,6 +4,6 @@
 
 .dev-logo {
 	max-width: 129px;
-	max-height: 122px;
+	max-height: 122.55px;
 	opacity: 1;
 }
